--- a/Frontend/front.html
+++ b/Frontend/front.html
@@ -20,7 +20,7 @@
     <p><i class="fa-solid fa-magnifying-glass"></i></p>
     <form id="search-form">
       <label for="haku"></label>
-      <input id="haku" type="text" name="message_body" placeholder="Etsi viestiä">
+      <input id="haku" required minlength="1" type="text" name="message_body" placeholder="Etsi viestiä">
       <button class="laheta-nappi" type="submit">Hae</button>
     </form>
 
