--- a/Frontend/login.html
+++ b/Frontend/login.html
@@ -23,10 +23,10 @@
         <h3>Kirjautuminen</h3>
 
         <label for="email-kentta">Sähköposti</label>
-          <input id="email-kentta" type="text" name="username" placeholder="Sähköposti"/>
+          <input id="email-kentta" required type="email" name="username" placeholder="Sähköposti"/>
 
         <label for="salasana-kentta">Salasana</label>
-          <input id="salasana-kentta" type="password" name="password" placeholder="Salasana"/>
+          <input id="salasana-kentta" required pattern="(?=.*[\p{Lu}]).{8,}" type="password" name="password" placeholder="Salasana"/>
 
           <button class="login-buttons" type="submit">Kirjaudu sisään</button>
 
@@ -40,13 +40,13 @@
         <h3>Rekisteröinti</h3>
 
         <label for="nimi-kentta">Nimi</label>
-        <input id="nimi-kentta" type="text" name="name" placeholder="Nimi">
+        <input id="nimi-kentta" required minlength="3" type="text" name="name" placeholder="Nimi">
 
         <label for="email-kentta2">Sähköposti</label>
-        <input id="email-kentta2" type="text" name="email" placeholder="Sähköposti">
+        <input id="email-kentta2" required type="email" name="email" placeholder="Sähköposti">
 
         <label for="salasana-kentta2">Salasana</label>
-        <input id="salasana-kentta2" type="password" name="password" placeholder="Salasana">
+        <input id="salasana-kentta2" required pattern="(?=.*[\p{Lu}]).{8,}" type="password" name="password" placeholder="Salasana">
         <p class="aputeksti">(Väh. 1 iso kirjain ja 8 merkkiä)</p>
 
         <button class="login-buttons" type="submit">Rekisteröidy</button>
