--- a/Frontend/modify-message.html
+++ b/Frontend/modify-message.html
@@ -22,9 +22,10 @@
             <div class="form-wrapper">
                 <h3>Muokkaa viestiä</h3>
                 <form id="modMessageForm">
+
                     <label for="tekstikentta"></label>
-                    <textarea id="tekstikentta" name="message_body" type="text" rows="4" cols="50"
-                              placeholder="Kirjoita viesti..."></textarea>
+                    <textarea id="tekstikentta" name="message_body" type="text" rows="4" cols="50" placeholder="Kirjoita viesti..."></textarea>
+
                     <button class="edit-buttons" type="submit">Tallenna</button>
                 </form>
             </div>
