Modals for like, search, post and delete

--- a/Frontend/show-message.html
+++ b/Frontend/show-message.html
@@ -59,6 +59,9 @@
   </div>
 </main>
 
+<dialog id="modal">
+</dialog>
+
 <script src="js/check-login.js"></script>
 <script src="js/serialize.js"></script>
 <script src="js/showMessage.js"></script>
