--- a/Frontend/front.html
+++ b/Frontend/front.html
@@ -89,6 +89,9 @@
   </div>
 </main>
 
+<dialog id="modal">
+</dialog>
+
 <script src="js/check-login.js"></script>
 <script src="js/serialize.js"></script>
 <script src="js/front.js"></script>
