Modals for edit user and edit message

--- a/Frontend/modify-message.html
+++ b/Frontend/modify-message.html
@@ -31,6 +31,10 @@
             </div>
         </div>
     </div>
+
+    <dialog id="modal">
+    </dialog>
+
     <script src="js/check-login.js"></script>
     <script src="js/serialize.js"></script>
     <script src="js/modify-message.js"></script>
