--- a/Frontend/modify-user.html
+++ b/Frontend/modify-user.html
@@ -53,6 +53,9 @@
 
 </div>
 
+<dialog id="modal">
+</dialog>
+
 <script src="js/check-login.js"></script>
 <script src="js/serialize.js"></script>
 <script src="js/modify-user.js"></script>
