modals for login and logout

--- a/Frontend/login.html
+++ b/Frontend/login.html
@@ -55,6 +55,9 @@
 
   </div>
 
+  <dialog id="modal">
+  </dialog>
+
 </div>
 <script src="js/serialize.js"></script>
 <script src="js/login.js"></script>
