--- a/Frontend/logout.html
+++ b/Frontend/logout.html
@@ -4,10 +4,15 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="css/login.css">
     <title>Olet kirjautunut ulos</title>
 </head>
 
 <body>
+
+<dialog id="modal">
+</dialog>
+
     <script src="js/logout.js"></script>
 </body>
 
