--- a/Frontend/login.html
+++ b/Frontend/login.html
@@ -19,7 +19,7 @@
   <div class="forms">
 
     <div id="login">
-      <form id="login-form" class="form" action="http://localhost:3000/auth/login" method="post">
+      <form id="login-form" class="form" method="post">
         <h3>Kirjautuminen</h3>
 
         <label for="email-kentta">Sähköposti</label>
@@ -36,7 +36,7 @@
     <button style="display: none;" id="log-out">Kirjaudu ulos</button>
 
     <div id="register">
-      <form action="http://localhost:3000/auth/register" method="post" class="form" id="add-user-form">
+      <form method="post" class="form" id="add-user-form">
         <h3>Rekisteröinti</h3>
 
         <label for="nimi-kentta">Nimi</label>
