--- a/Frontend/show-message.html
+++ b/Frontend/show-message.html
@@ -24,7 +24,7 @@
 
 <div id="viestit" class="vastaussivu-viestit"></div>
 
-    <form action="http://localhost:3000/message" method="post" enctype="multipart/form-data" id="addReplyForm">
+    <form method="post" enctype="multipart/form-data" id="addReplyForm">
 
       <label for="tekstikentta"></label>
       <textarea id="tekstikentta" name="message_body" type="text" rows="4" cols="50" placeholder="Kirjoita vastaus..."></textarea>
