--- a/Frontend/modify-user.html
+++ b/Frontend/modify-user.html
@@ -40,7 +40,7 @@
     </div>
 
     <div id="change-picture">
-      <form class="form" action="http://localhost:3000/user" method="post" enctype="multipart/form-data" id="addPictureForm">
+      <form class="form" method="post" enctype="multipart/form-data" id="addPictureForm">
         <h3>Lisää profiilikuva</h3>
 
         <label for="kuva">Kuva</label>
