code reformat and cleanup

--- a/Frontend/login.html
+++ b/Frontend/login.html
@@ -23,12 +23,13 @@
         <h3>Kirjautuminen</h3>
 
         <label for="email-kentta">Sähköposti</label>
-          <input id="email-kentta" required type="email" name="username" placeholder="Sähköposti"/>
+        <input id="email-kentta" required type="email" name="username" placeholder="Sähköposti"/>
 
         <label for="salasana-kentta">Salasana</label>
-          <input id="salasana-kentta" required pattern="(?=.*[\p{Lu}]).{8,}" type="password" name="password" placeholder="Salasana"/>
+        <input id="salasana-kentta" required pattern="(?=.*[\p{Lu}]).{8,}" type="password" name="password"
+               placeholder="Salasana"/>
 
-          <button class="login-buttons" type="submit">Kirjaudu sisään</button>
+        <button class="login-buttons" type="submit">Kirjaudu sisään</button>
 
       </form>
     </div>
@@ -46,7 +47,8 @@
         <input id="email-kentta2" required type="email" name="email" placeholder="Sähköposti">
 
         <label for="salasana-kentta2">Salasana</label>
-        <input id="salasana-kentta2" required pattern="(?=.*[\p{Lu}]).{8,}" type="password" name="password" placeholder="Salasana">
+        <input id="salasana-kentta2" required pattern="(?=.*[\p{Lu}]).{8,}" type="password" name="password"
+               placeholder="Salasana">
         <p class="aputeksti">(Väh. 1 iso kirjain ja 8 merkkiä)</p>
 
         <button class="login-buttons" type="submit">Rekisteröidy</button>
