--- a/Frontend/modify-user.html
+++ b/Frontend/modify-user.html
@@ -13,7 +13,8 @@
 <header>
   <h1>TVT21-M</h1>
   <div class="aluelista">
-    <a class="aluelinkki" href="front.html"><i class="fa-solid fa-house-user"></i><span class="linkkiteksti"> Etusivu</span></a>
+    <a class="aluelinkki" href="front.html"><i class="fa-solid fa-house-user"></i><span
+          class="linkkiteksti"> Etusivu</span></a>
   </div>
 </header>
 
@@ -32,7 +33,8 @@
         <input id="email-kentta" required type="email" name="email" placeholder="Email">
 
         <label for="salasana-kentta">Salasana</label>
-        <input id="salasana-kentta" required pattern="(?=.*[\p{Lu}]).{8,}" type="password" name="password" placeholder="Salasana">
+        <input id="salasana-kentta" required pattern="(?=.*[\p{Lu}]).{8,}" type="password" name="password"
+               placeholder="Salasana">
         <p class="aputeksti">(Väh. 1 iso kirjain, 8 merkkiä)</p>
 
         <button class="edit-buttons" type="submit">Tallenna</button>
