--- a/Frontend/show-message.html
+++ b/Frontend/show-message.html
@@ -22,12 +22,13 @@
   </div>
   <div id="keski">
 
-<div id="viestit" class="vastaussivu-viestit"></div>
+    <div id="viestit" class="vastaussivu-viestit"></div>
 
     <form method="post" enctype="multipart/form-data" id="addReplyForm">
 
       <label for="tekstikentta"></label>
-      <textarea id="tekstikentta" name="message_body" type="text" rows="4" cols="50" placeholder="Kirjoita vastaus..."></textarea>
+      <textarea id="tekstikentta" name="message_body" type="text" rows="4" cols="50"
+                placeholder="Kirjoita vastaus..."></textarea>
 
       <div id="input-container">
         <label for="kuva-nappi"></label>
@@ -37,7 +38,7 @@
       </div>
     </form>
 
-<div id="vastaukset"></div>
+    <div id="vastaukset"></div>
   </div>
   <div id="oikea">
     <div class="aluevalikko">
