--- a/Frontend/single.html
+++ b/Frontend/single.html
@@ -1,35 +1,36 @@
 <!DOCTYPE html>
 <html lang="fi">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport"
-          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link href="css/single.css" rel="stylesheet">
-    <link href='https://api.mapbox.com/mapbox-gl-js/v2.5.1/mapbox-gl.css' rel='stylesheet' />
-    <script src="https://kit.fontawesome.com/c5e93b78b7.js" crossorigin="anonymous"></script>
-    <title>Kuva</title>
+  <meta charset="UTF-8">
+  <meta name="viewport"
+        content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <link href="css/single.css" rel="stylesheet">
+  <link href='https://api.mapbox.com/mapbox-gl-js/v2.5.1/mapbox-gl.css' rel='stylesheet'/>
+  <script src="https://kit.fontawesome.com/c5e93b78b7.js" crossorigin="anonymous"></script>
+  <title>Kuva</title>
 </head>
 
 <header>
-    <h1>TVT21-M</h1>
-    <div class="aluelista">
-        <a class="aluelinkki" href="front.html"><i class="fa-solid fa-house-user"></i><span class="linkkiteksti"> Etusivu</span></a>
-    </div>
+  <h1>TVT21-M</h1>
+  <div class="aluelista">
+    <a class="aluelinkki" href="front.html"><i class="fa-solid fa-house-user"></i><span
+          class="linkkiteksti"> Etusivu</span></a>
+  </div>
 </header>
 <body>
-    <div class="container">
-        <div class="single" id="image">
-            <img src="" alt="">
-            <div id="map"></div>
-        </div>
-    </div>
+<div class="container">
+  <div class="single" id="image">
+    <img src="" alt="">
+    <div id="map"></div>
+  </div>
+</div>
 
-    <script src="js/check-login.js"></script>
-    <script src='https://api.mapbox.com/mapbox-gl-js/v2.5.1/mapbox-gl.js'></script>
-    <script src="js/mapbox.js"></script>
-    <script src="js/serialize.js"></script>
-    <script src="js/single.js"></script>
+<script src="js/check-login.js"></script>
+<script src='https://api.mapbox.com/mapbox-gl-js/v2.5.1/mapbox-gl.js'></script>
+<script src="js/mapbox.js"></script>
+<script src="js/serialize.js"></script>
+<script src="js/single.js"></script>
 </body>
 
 </html>
