--- a/Frontend/modify-message.html
+++ b/Frontend/modify-message.html
@@ -1,43 +1,44 @@
 <!DOCTYPE html>
 <html lang="fi">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport"
-          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link href="css/modify-message.css" rel="stylesheet">
-    <title>Muokkaa viestiä</title>
+  <meta charset="UTF-8">
+  <meta name="viewport"
+        content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <link href="css/modify-message.css" rel="stylesheet">
+  <title>Muokkaa viestiä</title>
 </head>
 
 <header>
-    <h1>TVT21-M</h1>
+  <h1>TVT21-M</h1>
 </header>
 
 <body>
-    <div class="container">
-        <nav>
-        </nav>
-        <hr>
-        <div class="forms">
-            <div class="form-wrapper">
-                <h3>Muokkaa viestiä</h3>
-                <form id="modMessageForm">
+<div class="container">
+  <nav>
+  </nav>
+  <hr>
+  <div class="forms">
+    <div class="form-wrapper">
+      <h3>Muokkaa viestiä</h3>
+      <form id="modMessageForm">
 
-                    <label for="tekstikentta"></label>
-                    <textarea id="tekstikentta" name="message_body" type="text" rows="4" cols="50" placeholder="Kirjoita viesti..."></textarea>
+        <label for="tekstikentta"></label>
+        <textarea id="tekstikentta" name="message_body" type="text" rows="4" cols="50"
+                  placeholder="Kirjoita viesti..."></textarea>
 
-                    <button class="edit-buttons" type="submit">Tallenna</button>
-                </form>
-            </div>
-        </div>
+        <button class="edit-buttons" type="submit">Tallenna</button>
+      </form>
     </div>
+  </div>
+</div>
 
-    <dialog id="modal">
-    </dialog>
+<dialog id="modal">
+</dialog>
 
-    <script src="js/check-login.js"></script>
-    <script src="js/serialize.js"></script>
-    <script src="js/modify-message.js"></script>
+<script src="js/check-login.js"></script>
+<script src="js/serialize.js"></script>
+<script src="js/modify-message.js"></script>
 </body>
 
 </html>
