--- a/Frontend/modify-user.html
+++ b/Frontend/modify-user.html
@@ -26,8 +26,8 @@
       <form class="form" id="modUserForm">
         <h3>Muokkaa tietoja</h3>
 
-        <label for="nimi-kentta">Nimi</label>
-        <input id="nimi-kentta" required minlength="1" maxlength="20" type="text" name="name" placeholder="Nimi">
+        <label for="nimi-kentta">Nimimerkki</label>
+        <input id="nimi-kentta" required minlength="1" maxlength="20" type="text" name="name" placeholder="Nimimerkki">
         <p class="aputeksti">(1-20 merkkiä)</p>
 
         <label for="email-kentta">Sähköposti</label>
