--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -8,21 +8,40 @@
     />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <link rel="stylesheet" href="css/index.css" />
-    <link rel="stylesheet" href="css/show-message.css" />
     <script src="https://kit.fontawesome.com/c5e93b78b7.js" crossorigin="anonymous"></script>
-    <title>Viestiketju</title>
+    <title>TVT21-M Keskustelualue</title>
   </head>
   <body>
     <header>
       <h1>TVT21-M</h1>
     </header>
-
     <main class="container">
-      <div id="vasen"></div>
-      <div id="keski">
-        <div id="viestit" class="vastaussivu-viestit"></div>
+      <div id="vasen">
+        <h2 class="vasen-teksti">Haku</h2>
+        <p><i class="fa-solid fa-magnifying-glass"></i></p>
+        <form id="search-form">
+          <label for="haku"></label>
+          <input id="haku" required minlength="1" type="text" name="message_body" placeholder="Etsi viestiä" />
+          <button class="laheta-nappi" type="submit">Hae</button>
+        </form>
 
-        <form method="post" enctype="multipart/form-data" id="addReplyForm">
+        <h2 class="vasen-teksti">Viestialueet</h2>
+        <p><i class="fa-solid fa-list"></i></p>
+        <form method="post" enctype="multipart/form-data" id="board-select2">
+          <label for="board-valikko"></label>
+          <select id="board-valikko" name="board_id">
+            <option value="1">Kaikki</option>
+            <option value="2">Yleinen</option>
+            <option value="3">Frontend</option>
+            <option value="4">Backend</option>
+            <option value="5">Tietokannat</option>
+            <option value="6">Matematiikka</option>
+          </select>
+          <button class="laheta-nappi" type="submit">Siirry</button>
+        </form>
+      </div>
+      <div id="keski">
+        <form method="post" enctype="multipart/form-data" id="addMessageForm">
           <label for="tekstikentta"></label>
           <textarea
             id="tekstikentta"
@@ -30,20 +49,28 @@
             type="text"
             rows="4"
             cols="50"
-            placeholder="Kirjoita vastaus..."
+            placeholder="Kirjoita viesti..."
           ></textarea>
-
           <div id="input-container">
             <label for="kuva-nappi"></label>
             <input id="kuva-nappi" type="file" name="picture" accept="image/*" placeholder="" />
+
+            <label for="board-select"></label>
+            <select class="select" id="board-select" name="board_id">
+              <option value="2">Yleinen</option>
+              <option value="3">Frontend</option>
+              <option value="4">Backend</option>
+              <option value="5">Tietokannat</option>
+              <option value="6">Matematiikka</option>
+            </select>
 
             <button class="laheta-nappi" type="submit">Lähetä</button>
           </div>
         </form>
 
-        <h2>Vastaukset:</h2>
-
-        <div id="vastaukset"></div>
+        <div id="viestit">
+          <div class="viesti"></div>
+        </div>
       </div>
       <div id="oikea">
         <div class="aluevalikko">
@@ -72,6 +99,6 @@
 
     <script src="js/check-login.js"></script>
     <script src="js/serialize.js"></script>
-    <script src="js/showMessage.js"></script>
+    <script src="js/front.js"></script>
   </body>
 </html>
